Bug 128398 store referrer in history patch by  James Andrewartha <trs80@tartarus.uwa.edu.au> r=biesi sr=neil